# csce310

./: CMakeLists.txt
homework01/program1/: csce310hw001pt01.cpp  csce310hw001pt01.h  out  part01test01.input  part01test01.solution  test01.cpp
homework01/program2/: csce310hw001pt02.cpp  csce310hw001pt02.h  out  part02test01.input  part02test01.solution  test02.cpp
homework02/program1/: csce310hw002pt01.cpp  csce310hw002pt01.h  part01test01.input.txt  part01test01.solution.txt  test01.cpp
homework02/program2/: csce310hw002pt02.cpp  csce310hw002pt02.h  part02test01.input.txt  part02test01.solution.txt  test02.cpp
homework02/program3/: csce310hw002pt03.cpp  csce310hw002pt03.h  part03test01.input.txt  part03test01.solution.txt  test03.cpp
